--- a/package.json
+++ b/package.json
@@ -16,31 +16,36 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "primereact": "^10.9.7",
-    "primeicons": "^6.0.1",
-    "primeflex": "^3.3.1",
-    "three": "^0.177.0",
     "react-router-dom": "^6.11.2",
-    "axios": "^1.6.7"
+    "three": "^0.177.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/three": "^0.177.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-react": "^4.2.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.1.0",
     "eslint": "^8.48.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.55.0",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   },
