--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.6.7",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
